codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__mcp_tools_output_lists_tools_for_hyphenated_server_names.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • cfm-camp
    • Status: enabled
    • Auth: Unsupported
    • Command: node /workspace/purrnet/apps/cfm/backend/bin/mcp-camp.js
    • Env: BACKEND_URL=*****
    • Tools: (none)
    • Resources: (none)
    • Resource templates: (none)

  • cfm-operations
    • Status: enabled
    • Auth: Unsupported
    • Command: node /workspace/purrnet/apps/cfm/backend/bin/cfm-operations.js
    • Env: BACKEND_URL=*****, CF_SCHEMA_REGISTRY_MODE=*****, CF_SCHEMA_REGISTRY_URI=*****
    • Tools: (none)
    • Resources: (none)
    • Resource templates: (none)

  • some-server
    • Status: enabled
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
    • Resources: (none)
    • Resource templates: (none)
