codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__multi_file_reader_call_all_fail_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Read with multi_file_reader
  └ Requests: 2 total | 0 success | 2 error | 0 lines
    missing-a.txt (full) - error: file_not_found
    missing-b.txt:1-3 - error: permission_denied
